--- a/nowcasting/templates/dashboard.html
+++ b/nowcasting/templates/dashboard.html
@@ -23,7 +23,7 @@
   <link rel="apple-touch-icon" sizes="76x76" href="{% static 'img/apple-icon.png' %}">
   <link rel="icon" type="image/png" href="{% static 'img/favicon.png' %}">
   <title>
-    Black Dashboard by Creative Tim
+    GDP Nowcasting
   </title>
   <!--     Fonts and icons     -->
   <link href="https://fonts.googleapis.com/css?family=Poppins:200,300,400,600,700,800" rel="stylesheet" />
@@ -55,7 +55,7 @@
           <li class="active ">
             <a href="./dashboard.html">
               <i class="tim-icons icon-chart-pie-36"></i>
-              <p>Dashboard</p>
+              <p>GDP Nowcasting</p>
             </a>
           </li>
         </ul>
@@ -63,7 +63,7 @@
     </div>
     <div class="main-panel" data = 'blue'>
       <!-- Navbar -->
-      <nav class="navbar navbar-expand-lg navbar-absolute navbar-transparent">
+      <!-- <nav class="navbar navbar-expand-lg navbar-absolute navbar-transparent">
         <div class="container-fluid">
           <div class="navbar-wrapper">
             <div class="navbar-toggle d-inline">
@@ -88,7 +88,7 @@
             </ul>
           </div>
         </div>
-      </nav>
+      </nav> -->
       <div class="modal modal-search fade" id="searchModal" tabindex="-1" role="dialog" aria-labelledby="searchModal" aria-hidden="true">
         <div class="modal-dialog" role="document">
           <div class="modal-content">
