--- a/nowcasting/templates/dashboard.html
+++ b/nowcasting/templates/dashboard.html
@@ -55,7 +55,7 @@
           <li class="active ">
             <a href="./dashboard.html">
               <i class="tim-icons icon-chart-pie-36"></i>
-              <p>GDP Nowcasting</p>
+              <p>US</p>
             </a>
           </li>
         </ul>
@@ -89,7 +89,7 @@
           </div>
         </div>
       </nav> -->
-      <div class="modal modal-search fade" id="searchModal" tabindex="-1" role="dialog" aria-labelledby="searchModal" aria-hidden="true">
+      <!-- <div class="modal modal-search fade" id="searchModal" tabindex="-1" role="dialog" aria-labelledby="searchModal" aria-hidden="true">
         <div class="modal-dialog" role="document">
           <div class="modal-content">
             <div class="modal-header">
@@ -100,7 +100,7 @@
             </div>
           </div>
         </div>
-      </div>
+      </div> -->
       <!-- End Navbar -->
       <div class="content">
         <div class="row">
@@ -110,7 +110,7 @@
                 <div class="row">
                   <div class="col-sm-6 text-left">
                     <h5 class="card-category">Quarterly Growth Rate (%)</h5>
-                    <h2 class="card-title">GDP NowCasting</h2>
+                    <h2 class="card-title">US GDP NowCasting</h2>
                   </div>
                   <div class="col-sm-6">
                     <div class="btn-group btn-group-toggle float-right" data-toggle="buttons">
@@ -174,7 +174,7 @@
           </div>
         </div>
       </div>
-      <footer class="footer">
+      <!-- <footer class="footer">
         <div class="container-fluid">
           <div class="copyright">
             ©
@@ -183,8 +183,8 @@
             </script> made with <i class="tim-icons icon-heart-2"></i> by
             <a href="https://www.creative-tim.com" target="_blank">Creative Tim</a> for a better web.
           </div>
-        </div>
-      </footer>
+        </div> 
+      </footer> -->
     </div>
   </div>
   <div class="fixed-plugin">
